--- a/tailwindcss/package.json
+++ b/tailwindcss/package.json
@@ -5,8 +5,9 @@
     "tailwindcss": "^3.1.8"
   },
   "scripts": {
+    "watch":"npx tailwindcss -i tailwind.css -o ../final.css --watch",
     "build":"npx tailwindcss -i tailwind.css -o ../final.css --minify",
     "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "deploy":"-d build"
   }
 }
