--- a/tailwindcss/package.json
+++ b/tailwindcss/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "watch":"npx tailwindcss -i tailwind.css -o ../final.css --watch",
     "build":"npx tailwindcss -i tailwind.css -o ../final.css --minify",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "predeploy":"npm run watch"
   }
 }
