--- a/tailwindcss/package.json
+++ b/tailwindcss/package.json
@@ -5,9 +5,9 @@
     "tailwindcss": "^3.1.8"
   },
   "scripts": {
-    "watch":"npx tailwindcss -i tailwind.css -o ../final.css --watch",
+    "watch":"npx tailwindcss -i tailwind.css -o ../app.css --watch",
     "build":"npx tailwindcss -i tailwind.css -o ../final.css --minify",
-    "predeploy":"npm run watch",
+    "predeploy":"npm run build",
     "deploy":"gh-pages -d build"
   }
 }
